# rf-resource-issue

./: .gitignore  .pre-commit-config.yaml  .project  .pydevproject  README.md  pyproject.toml  setup.cfg
config/: config.txt  pylintrc.cfg  pytest.cfg
libraries/: runrobot.py
libraries/rfresissue/: device_kws.py  devices.py
resources/dryrun/: select_simu.resource  sim_typea.resource  sim_typeb.resource
resources/rfresissue/: device2_user_kws.resource
testsuite/: __init__.robot
testsuite/01__device_one/: __init__.robot  device1_tests.robot
testsuite/02__device_two/: __init__.robot  device2_tests.robot
testsuite/03__both_devices/: __init__.robot  both_device_tests.robot  both_device_tests2.robot
testsuite/04__dryrun/subsuite/: simtests.robot
